// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote parsing Multi-level blockquote parsing 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 8,
          "start": 2,
        },
        "text": "Line 1",
        "type": "Text",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 17,
          "start": 11,
        },
        "text": "Line 2",
        "type": "Text",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 26,
          "start": 20,
        },
        "text": "Line 3",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 31,
            "start": 0,
          },
          "text": "> Line 1
> Line 2
> Line 3
Text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 31,
        "start": 0,
      },
      "raw": "> Line 1
> Line 2
> Line 3
Text",
      "type": "File",
    },
    "pos": Object {
      "end": 27,
      "start": 0,
    },
    "type": "Blockquote",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 31,
          "start": 27,
        },
        "text": "Text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 31,
            "start": 0,
          },
          "text": "> Line 1
> Line 2
> Line 3
Text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 31,
        "start": 0,
      },
      "raw": "> Line 1
> Line 2
> Line 3
Text",
      "type": "File",
    },
    "pos": Object {
      "end": 31,
      "start": 27,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Em parsing Em in text 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 10,
          "start": 0,
        },
        "text": "Text with ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 18,
              "start": 11,
            },
            "text": "em text",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 19,
          "start": 10,
        },
        "type": "Em",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 24,
          "start": 19,
        },
        "text": "-text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 24,
            "start": 0,
          },
          "text": "Text with *em text*-text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 24,
        "start": 0,
      },
      "raw": "Text with *em text*-text",
      "type": "File",
    },
    "pos": Object {
      "end": 24,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Em parsing Em in text with sub-node 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 10,
          "start": 0,
        },
        "text": "Text with ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 13,
              "start": 11,
            },
            "text": "em",
            "type": "Text",
          },
          Object {
            "parent": [Circular],
            "pos": Object {
              "end": 19,
              "start": 13,
            },
            "text": "code",
            "type": "CodeSpan",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 24,
              "start": 19,
            },
            "text": " text",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 25,
          "start": 10,
        },
        "type": "Em",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 30,
          "start": 25,
        },
        "text": "-text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 30,
            "start": 0,
          },
          "text": "Text with *em\`code\` text*-text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 30,
        "start": 0,
      },
      "raw": "Text with *em\`code\` text*-text",
      "type": "File",
    },
    "pos": Object {
      "end": 30,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Heading parsing Header with text parsing 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 10,
          "start": 2,
        },
        "text": "Header 1",
        "type": "Text",
      },
    ],
    "depth": 1,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 16,
            "start": 0,
          },
          "text": "# Header 1

Text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 16,
        "start": 0,
      },
      "raw": "# Header 1

Text",
      "type": "File",
    },
    "pos": Object {
      "end": 10,
      "start": 0,
    },
    "type": "Heading",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 16,
          "start": 12,
        },
        "text": "Text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 16,
            "start": 0,
          },
          "text": "# Header 1

Text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 16,
        "start": 0,
      },
      "raw": "# Header 1

Text",
      "type": "File",
    },
    "pos": Object {
      "end": 16,
      "start": 12,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Heading parsing Multi-level heading parsing 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 10,
          "start": 2,
        },
        "text": "Header 1",
        "type": "Text",
      },
    ],
    "depth": 1,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 51,
            "start": 0,
          },
          "text": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 51,
        "start": 0,
      },
      "raw": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
      "type": "File",
    },
    "pos": Object {
      "end": 10,
      "start": 0,
    },
    "type": "Heading",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 21,
          "start": 14,
        },
        "text": "Header ",
        "type": "Text",
      },
      Object {
        "parent": [Circular],
        "pos": Object {
          "end": 24,
          "start": 21,
        },
        "text": "2",
        "type": "CodeSpan",
      },
    ],
    "depth": 2,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 51,
            "start": 0,
          },
          "text": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 51,
        "start": 0,
      },
      "raw": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
      "type": "File",
    },
    "pos": Object {
      "end": 24,
      "start": 11,
    },
    "type": "Heading",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 37,
          "start": 29,
        },
        "text": "Header 3",
        "type": "Text",
      },
    ],
    "depth": 3,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 51,
            "start": 0,
          },
          "text": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 51,
        "start": 0,
      },
      "raw": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
      "type": "File",
    },
    "pos": Object {
      "end": 37,
      "start": 25,
    },
    "type": "Heading",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 51,
          "start": 43,
        },
        "text": "Header 4",
        "type": "Text",
      },
    ],
    "depth": 4,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 51,
            "start": 0,
          },
          "text": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 51,
        "start": 0,
      },
      "raw": "# Header 1
## Header \`2\`
### Header 3
#### Header 4",
      "type": "File",
    },
    "pos": Object {
      "end": 51,
      "start": 38,
    },
    "type": "Heading",
  },
]
`;

exports[`Hr parsing Default hr 1`] = `
Array [
  Object {
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 7,
            "start": 0,
          },
          "text": "
-----
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 7,
        "start": 0,
      },
      "raw": "
-----
",
      "type": "File",
    },
    "pos": Object {
      "end": 6,
      "start": 1,
    },
    "type": "Hr",
  },
]
`;

exports[`Hr parsing HR with text 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 7,
          "start": 1,
        },
        "text": "Text 1",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 21,
            "start": 0,
          },
          "text": "
Text 1
-----
Text 2
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 21,
        "start": 0,
      },
      "raw": "
Text 1
-----
Text 2
",
      "type": "File",
    },
    "pos": Object {
      "end": 7,
      "start": 1,
    },
    "type": "Paragraph",
  },
  Object {
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 21,
            "start": 0,
          },
          "text": "
Text 1
-----
Text 2
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 21,
        "start": 0,
      },
      "raw": "
Text 1
-----
Text 2
",
      "type": "File",
    },
    "pos": Object {
      "end": 13,
      "start": 8,
    },
    "type": "Hr",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 20,
          "start": 14,
        },
        "text": "Text 2",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 21,
            "start": 0,
          },
          "text": "
Text 1
-----
Text 2
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 21,
        "start": 0,
      },
      "raw": "
Text 1
-----
Text 2
",
      "type": "File",
    },
    "pos": Object {
      "end": 20,
      "start": 14,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Image parsing Extended image 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "href": "../../image.png",
        "name": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 47,
              "start": 37,
            },
            "text": "Image Name",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 61,
          "start": 0,
        },
        "text": "image-label",
        "type": "Image",
        "width": "14cm",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 61,
            "start": 0,
          },
          "text": "![image-label](../../image.png)(
    Image Name
)(
    14cm
)",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 61,
        "start": 0,
      },
      "raw": "![image-label](../../image.png)(
    Image Name
)(
    14cm
)",
      "type": "File",
    },
    "pos": Object {
      "end": 61,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Image parsing Image args error 1`] = `
Array [
  Object {
    "errorType": 0,
    "filePath": "null",
    "message": "Argument name specified twice",
    "pos": Object {
      "end": Object {
        "absolute": 73,
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "absolute": 61,
        "column": 1,
        "line": 1,
      },
    },
    "severity": "WARNING",
  },
]
`;

exports[`Image parsing Markdown-like image 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "href": "../../image.png",
        "parent": [Circular],
        "pos": Object {
          "end": 31,
          "start": 0,
        },
        "text": "image-label",
        "type": "Image",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 31,
            "start": 0,
          },
          "text": "![image-label](../../image.png)",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 31,
        "start": 0,
      },
      "raw": "![image-label](../../image.png)",
      "type": "File",
    },
    "pos": Object {
      "end": 31,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`List parsing List with list 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 27,
              "start": 3,
            },
            "text": "Text 1 Additional text 1",
            "type": "Text",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "parent": [Circular],
                    "pos": Object {
                      "end": 38,
                      "start": 34,
                    },
                    "text": "Item",
                    "type": "Text",
                  },
                ],
                "loose": false,
                "parent": [Circular],
                "pos": Object {
                  "end": 38,
                  "start": 28,
                },
                "task": false,
                "type": "ListItem",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "parent": [Circular],
                    "pos": Object {
                      "end": 54,
                      "start": 45,
                    },
                    "text": "Next Item",
                    "type": "Text",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [],
                            "parent": [Circular],
                            "pos": Object {
                              "end": 79,
                              "start": 65,
                            },
                            "text": "One more item ",
                            "type": "Text",
                          },
                          Object {
                            "parent": [Circular],
                            "pos": Object {
                              "end": 83,
                              "start": 79,
                            },
                            "text": ":)",
                            "type": "CodeSpan",
                          },
                        ],
                        "loose": false,
                        "parent": [Circular],
                        "pos": Object {
                          "end": 83,
                          "start": 55,
                        },
                        "task": false,
                        "type": "ListItem",
                      },
                    ],
                    "loose": false,
                    "ordered": false,
                    "parent": [Circular],
                    "pos": Object {
                      "end": 83,
                      "start": 55,
                    },
                    "start": 0,
                    "type": "List",
                  },
                ],
                "loose": false,
                "parent": [Circular],
                "pos": Object {
                  "end": 83,
                  "start": 39,
                },
                "task": false,
                "type": "ListItem",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "parent": [Circular],
                    "pos": Object {
                      "end": 100,
                      "start": 90,
                    },
                    "text": "Conclusion",
                    "type": "Text",
                  },
                ],
                "loose": false,
                "parent": [Circular],
                "pos": Object {
                  "end": 100,
                  "start": 84,
                },
                "task": false,
                "type": "ListItem",
              },
            ],
            "loose": false,
            "ordered": false,
            "parent": [Circular],
            "pos": Object {
              "end": 100,
              "start": 28,
            },
            "start": 0,
            "type": "List",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 100,
          "start": 0,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 109,
              "start": 104,
            },
            "text": "Text ",
            "type": "Text",
          },
          Object {
            "parent": [Circular],
            "pos": Object {
              "end": 112,
              "start": 109,
            },
            "text": "2",
            "type": "CodeSpan",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 112,
          "start": 101,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 122,
                  "start": 118,
                },
                "text": "Text",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 124,
              "start": 116,
            },
            "type": "Strong",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 126,
              "start": 124,
            },
            "text": " 3",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 126,
          "start": 113,
        },
        "task": false,
        "type": "ListItem",
      },
    ],
    "loose": false,
    "ordered": true,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 126,
            "start": 0,
          },
          "text": "3. Text 1
Additional text 1
    * Item
    * Next Item
        - One more item \`:)\`
    * Conclusion
4. Text \`2\`
5. **Text** 3",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 126,
        "start": 0,
      },
      "raw": "3. Text 1
Additional text 1
    * Item
    * Next Item
        - One more item \`:)\`
    * Conclusion
4. Text \`2\`
5. **Text** 3",
      "type": "File",
    },
    "pos": Object {
      "end": 126,
      "start": 0,
    },
    "start": 3,
    "type": "List",
  },
]
`;

exports[`List parsing List with multiline items 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 27,
              "start": 3,
            },
            "text": "Text 1 Additional text 1",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 27,
          "start": 0,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 36,
              "start": 31,
            },
            "text": "Text ",
            "type": "Text",
          },
          Object {
            "parent": [Circular],
            "pos": Object {
              "end": 39,
              "start": 36,
            },
            "text": "2",
            "type": "CodeSpan",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 39,
          "start": 28,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 49,
                  "start": 45,
                },
                "text": "Text",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 51,
              "start": 43,
            },
            "type": "Strong",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 74,
              "start": 51,
            },
            "text": " 3    Additional text 3",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 74,
          "start": 40,
        },
        "task": false,
        "type": "ListItem",
      },
    ],
    "loose": false,
    "ordered": true,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 74,
            "start": 0,
          },
          "text": "1. Text 1
Additional text 1
2. Text \`2\`
3. **Text** 3
   Additional text 3",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 74,
        "start": 0,
      },
      "raw": "1. Text 1
Additional text 1
2. Text \`2\`
3. **Text** 3
   Additional text 3",
      "type": "File",
    },
    "pos": Object {
      "end": 74,
      "start": 0,
    },
    "start": 1,
    "type": "List",
  },
]
`;

exports[`List parsing List with text after 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 9,
              "start": 3,
            },
            "text": "Text 1",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 9,
          "start": 0,
        },
        "task": false,
        "type": "ListItem",
      },
    ],
    "loose": false,
    "ordered": true,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 15,
            "start": 0,
          },
          "text": "3. Text 1

Text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 15,
        "start": 0,
      },
      "raw": "3. Text 1

Text",
      "type": "File",
    },
    "pos": Object {
      "end": 9,
      "start": 0,
    },
    "start": 3,
    "type": "List",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 15,
          "start": 11,
        },
        "text": "Text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 15,
            "start": 0,
          },
          "text": "3. Text 1

Text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 15,
        "start": 0,
      },
      "raw": "3. Text 1

Text",
      "type": "File",
    },
    "pos": Object {
      "end": 15,
      "start": 11,
    },
    "type": "Paragraph",
  },
]
`;

exports[`List parsing Simple ordered list 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 9,
              "start": 3,
            },
            "text": "Text 1",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 9,
          "start": 0,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 18,
              "start": 13,
            },
            "text": "Text ",
            "type": "Text",
          },
          Object {
            "parent": [Circular],
            "pos": Object {
              "end": 21,
              "start": 18,
            },
            "text": "2",
            "type": "CodeSpan",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 21,
          "start": 10,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 31,
                  "start": 27,
                },
                "text": "Text",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 33,
              "start": 25,
            },
            "type": "Strong",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 35,
              "start": 33,
            },
            "text": " 3",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 35,
          "start": 22,
        },
        "task": false,
        "type": "ListItem",
      },
    ],
    "loose": false,
    "ordered": true,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 35,
            "start": 0,
          },
          "text": "1. Text 1
2. Text \`2\`
3. **Text** 3",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 35,
        "start": 0,
      },
      "raw": "1. Text 1
2. Text \`2\`
3. **Text** 3",
      "type": "File",
    },
    "pos": Object {
      "end": 35,
      "start": 0,
    },
    "start": 1,
    "type": "List",
  },
]
`;

exports[`Paragraph parsing Complex 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 18,
          "start": 3,
        },
        "text": "Not a paragraph",
        "type": "Text",
      },
    ],
    "depth": 2,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 18,
      "start": 0,
    },
    "type": "Heading",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 29,
          "start": 19,
        },
        "text": "Text with ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 42,
              "start": 31,
            },
            "text": "strong text",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 44,
          "start": 29,
        },
        "type": "Strong",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 49,
          "start": 44,
        },
        "text": "-text",
        "type": "Text",
      },
      Object {
        "parent": [Circular],
        "pos": Object {
          "end": 51,
          "start": 49,
        },
        "type": "Br",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 65,
          "start": 52,
        },
        "text": "With BR break",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 65,
      "start": 19,
    },
    "type": "Paragraph",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 90,
          "start": 67,
        },
        "text": "New paragraph via break",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 90,
      "start": 67,
    },
    "type": "Paragraph",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 98,
              "start": 94,
            },
            "text": "List",
            "type": "Text",
          },
          Object {
            "parent": [Circular],
            "pos": Object {
              "end": 100,
              "start": 98,
            },
            "type": "Br",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 107,
              "start": 101,
            },
            "text": "item 1",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 107,
          "start": 91,
        },
        "task": false,
        "type": "ListItem",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 122,
              "start": 111,
            },
            "text": "List item 3",
            "type": "Text",
          },
        ],
        "loose": false,
        "parent": [Circular],
        "pos": Object {
          "end": 122,
          "start": 108,
        },
        "task": false,
        "type": "ListItem",
      },
    ],
    "loose": false,
    "ordered": true,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 122,
      "start": 91,
    },
    "start": 1,
    "type": "List",
  },
  Object {
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 128,
      "start": 124,
    },
    "type": "Hr",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 150,
          "start": 133,
        },
        "text": "Not a paragraph 2",
        "type": "Text",
      },
    ],
    "depth": 2,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 150,
      "start": 130,
    },
    "type": "Heading",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 155,
          "start": 151,
        },
        "text": "text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 155,
            "start": 0,
          },
          "text": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 155,
        "start": 0,
      },
      "raw": "## Not a paragraph
Text with **strong text**-text  
With BR break

New paragraph via break
1. List  
item 1
2. List item 3

----

## Not a paragraph 2
text",
      "type": "File",
    },
    "pos": Object {
      "end": 155,
      "start": 151,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Strong parsing Simple strong 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 10,
          "start": 0,
        },
        "text": "Text with ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 23,
              "start": 12,
            },
            "text": "strong text",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 25,
          "start": 10,
        },
        "type": "Strong",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 30,
          "start": 25,
        },
        "text": "-text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 30,
            "start": 0,
          },
          "text": "Text with **strong text**-text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 30,
        "start": 0,
      },
      "raw": "Text with **strong text**-text",
      "type": "File",
    },
    "pos": Object {
      "end": 30,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`Strong parsing Strong and strong-em 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 5,
          "start": 0,
        },
        "text": "Text ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 9,
              "start": 6,
            },
            "text": "em ",
            "type": "Text",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 17,
                  "start": 11,
                },
                "text": "strong",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 19,
              "start": 9,
            },
            "type": "Strong",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 24,
              "start": 19,
            },
            "text": " text",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 25,
          "start": 5,
        },
        "type": "Em",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 31,
          "start": 25,
        },
        "text": " with ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 40,
              "start": 33,
            },
            "text": "strong ",
            "type": "Text",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 43,
                  "start": 41,
                },
                "text": "em",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 44,
              "start": 40,
            },
            "type": "Em",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 49,
              "start": 44,
            },
            "text": " text",
            "type": "Text",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 51,
          "start": 31,
        },
        "type": "Strong",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 56,
          "start": 51,
        },
        "text": "-text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 56,
            "start": 0,
          },
          "text": "Text *em **strong** text* with **strong *em* text**-text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 56,
        "start": 0,
      },
      "raw": "Text *em **strong** text* with **strong *em* text**-text",
      "type": "File",
    },
    "pos": Object {
      "end": 56,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`code block lexer check Complex raw node 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 11,
          "start": 0,
        },
        "text": "Sample text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 47,
            "start": 0,
          },
          "text": "Sample text
\`\`\`
Code block
\`\`\`
New sample text
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 47,
        "start": 0,
      },
      "raw": "Sample text
\`\`\`
Code block
\`\`\`
New sample text
",
      "type": "File",
    },
    "pos": Object {
      "end": 11,
      "start": 0,
    },
    "type": "Paragraph",
  },
  Object {
    "codeBlockStyle": null,
    "lang": null,
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 47,
            "start": 0,
          },
          "text": "Sample text
\`\`\`
Code block
\`\`\`
New sample text
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 47,
        "start": 0,
      },
      "raw": "Sample text
\`\`\`
Code block
\`\`\`
New sample text
",
      "type": "File",
    },
    "pos": Object {
      "end": 30,
      "start": 12,
    },
    "text": "Code block",
    "type": "Code",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 46,
          "start": 31,
        },
        "text": "New sample text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 47,
            "start": 0,
          },
          "text": "Sample text
\`\`\`
Code block
\`\`\`
New sample text
",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 47,
        "start": 0,
      },
      "raw": "Sample text
\`\`\`
Code block
\`\`\`
New sample text
",
      "type": "File",
    },
    "pos": Object {
      "end": 46,
      "start": 31,
    },
    "type": "Paragraph",
  },
]
`;

exports[`code block lexer check Error raw node 1`] = `
Array [
  Object {
    "errorType": 0,
    "filePath": "test.md",
    "message": "Unable to find closing quotes for block code",
    "pos": Object {
      "end": Object {
        "absolute": 15,
        "column": 1,
        "line": 5,
      },
      "start": Object {
        "absolute": 12,
        "column": 1,
        "line": 2,
      },
    },
    "severity": "ERROR",
  },
]
`;

exports[`link check Link with inner md in text 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 6,
          "start": 0,
        },
        "text": "Hello ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 10,
              "start": 7,
            },
            "text": "ti ",
            "type": "Text",
          },
          Object {
            "parent": [Circular],
            "pos": Object {
              "end": 19,
              "start": 11,
            },
            "text": "co][de",
            "type": "CodeSpan",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 22,
              "start": 19,
            },
            "text": " le",
            "type": "Text",
          },
        ],
        "href": "li-nk",
        "parent": [Circular],
        "pos": Object {
          "end": 30,
          "start": 6,
        },
        "type": "Link",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 35,
          "start": 30,
        },
        "text": " text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 35,
            "start": 0,
          },
          "text": "Hello [ti 
\`co][de\` le](li-nk) text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 35,
        "start": 0,
      },
      "raw": "Hello [ti 
\`co][de\` le](li-nk) text",
      "type": "File",
    },
    "pos": Object {
      "end": 35,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`link check Simple Link in text 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 6,
          "start": 0,
        },
        "text": "Hello ",
        "type": "Text",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 14,
              "start": 7,
            },
            "text": "ti t le",
            "type": "Text",
          },
        ],
        "href": "li-nk",
        "parent": [Circular],
        "pos": Object {
          "end": 22,
          "start": 6,
        },
        "type": "Link",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 27,
          "start": 22,
        },
        "text": " text",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 27,
            "start": 0,
          },
          "text": "Hello [ti t le](li-nk) text",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 27,
        "start": 0,
      },
      "raw": "Hello [ti t le](li-nk) text",
      "type": "File",
    },
    "pos": Object {
      "end": 27,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`macros parsing Brackets mismatch 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "keyArgs": Object {},
        "label": "(@key ",
        "opcode": "Macro",
        "parent": [Circular],
        "pos": Object {
          "end": 14,
          "start": 0,
        },
        "posArgs": Array [],
        "type": "OpCode",
      },
      Object {
        "children": Array [],
        "parent": [Circular],
        "pos": Object {
          "end": 40,
          "start": 14,
        },
        "text": "value)(@key another value)",
        "type": "Text",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 40,
            "start": 0,
          },
          "text": "!Macro[(@key ]value)(@key another value)",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 40,
        "start": 0,
      },
      "raw": "!Macro[(@key ]value)(@key another value)",
      "type": "File",
    },
    "pos": Object {
      "end": 40,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`macros parsing Complex macros with name, label, pos and key args 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "keyArgs": Object {
          "keyArgName": Array [
            Object {
              "children": Array [],
              "parent": [Circular],
              "pos": Object {
                "end": 62,
                "start": 55,
              },
              "text": "argName",
              "type": "Text",
            },
          ],
        },
        "label": "label-text",
        "opcode": "Macro",
        "parent": [Circular],
        "pos": Object {
          "end": 63,
          "start": 0,
        },
        "posArgs": Array [
          Array [
            Object {
              "children": Array [],
              "parent": [Circular],
              "pos": Object {
                "end": 28,
                "start": 19,
              },
              "text": "pos arg 1",
              "type": "Text",
            },
          ],
          Array [
            Object {
              "parent": [Circular],
              "pos": Object {
                "end": 39,
                "start": 30,
              },
              "text": "pos arg",
              "type": "CodeSpan",
            },
            Object {
              "children": Array [],
              "parent": [Circular],
              "pos": Object {
                "end": 41,
                "start": 39,
              },
              "text": " 2",
              "type": "Text",
            },
          ],
        ],
        "type": "OpCode",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 63,
            "start": 0,
          },
          "text": "!Macro[label-text](pos arg 1)(\`pos arg\` 2)(@keyArgName argName)",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 63,
        "start": 0,
      },
      "raw": "!Macro[label-text](pos arg 1)(\`pos arg\` 2)(@keyArgName argName)",
      "type": "File",
    },
    "pos": Object {
      "end": 63,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`macros parsing Key is defined wrongly 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "keyArgs": Object {},
        "label": null,
        "opcode": "Macro",
        "parent": [Circular],
        "pos": Object {
          "end": 15,
          "start": 0,
        },
        "posArgs": Array [
          Array [
            Object {
              "children": Array [],
              "parent": [Circular],
              "pos": Object {
                "end": 11,
                "start": 7,
              },
              "text": "@key",
              "type": "Text",
            },
          ],
          Array [
            Object {
              "children": Array [],
              "parent": [Circular],
              "pos": Object {
                "end": 14,
                "start": 13,
              },
              "text": "@",
              "type": "Text",
            },
          ],
        ],
        "type": "OpCode",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 15,
            "start": 0,
          },
          "text": "!Macro(@key)(@)",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 15,
        "start": 0,
      },
      "raw": "!Macro(@key)(@)",
      "type": "File",
    },
    "pos": Object {
      "end": 15,
      "start": 0,
    },
    "type": "Paragraph",
  },
]
`;

exports[`table parsing Simple table 1`] = `
Array [
  Object {
    "align": Array [],
    "header": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 10,
                  "start": 2,
                },
                "text": "Column 1",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 11,
              "start": 1,
            },
            "type": "TableCell",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 21,
                  "start": 13,
                },
                "text": "Column 2",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 22,
              "start": 12,
            },
            "type": "TableCell",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 23,
          "start": 0,
        },
        "type": "TableRow",
      },
    ],
    "parent": Object {
      "children": Array [
        Object {
          "parent": [Circular],
          "pos": Object {
            "end": 99,
            "start": 0,
          },
          "text": "| Column 1 | Column 2 |
| -------- | -------- |
| Value **1** | Value \`2\` |
|Value [with](link) | |",
          "type": "Raw",
        },
      ],
      "parent": null,
      "path": "test.md",
      "pos": Object {
        "end": 99,
        "start": 0,
      },
      "raw": "| Column 1 | Column 2 |
| -------- | -------- |
| Value **1** | Value \`2\` |
|Value [with](link) | |",
      "type": "File",
    },
    "pos": Object {
      "end": 99,
      "start": 0,
    },
    "rows": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 34,
                  "start": 26,
                },
                "text": "--------",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 35,
              "start": 25,
            },
            "type": "TableCell",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 45,
                  "start": 37,
                },
                "text": "--------",
                "type": "Text",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 46,
              "start": 36,
            },
            "type": "TableCell",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 47,
          "start": 24,
        },
        "type": "TableRow",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 56,
                  "start": 50,
                },
                "text": "Value ",
                "type": "Text",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "parent": [Circular],
                    "pos": Object {
                      "end": 59,
                      "start": 58,
                    },
                    "text": "1",
                    "type": "Text",
                  },
                ],
                "parent": [Circular],
                "pos": Object {
                  "end": 61,
                  "start": 56,
                },
                "type": "Strong",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 62,
              "start": 49,
            },
            "type": "TableCell",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 70,
                  "start": 64,
                },
                "text": "Value ",
                "type": "Text",
              },
              Object {
                "parent": [Circular],
                "pos": Object {
                  "end": 73,
                  "start": 70,
                },
                "text": "2",
                "type": "CodeSpan",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 74,
              "start": 63,
            },
            "type": "TableCell",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 75,
          "start": 48,
        },
        "type": "TableRow",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parent": [Circular],
                "pos": Object {
                  "end": 83,
                  "start": 77,
                },
                "text": "Value ",
                "type": "Text",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "parent": [Circular],
                    "pos": Object {
                      "end": 88,
                      "start": 84,
                    },
                    "text": "with",
                    "type": "Text",
                  },
                ],
                "href": "link",
                "parent": [Circular],
                "pos": Object {
                  "end": 95,
                  "start": 83,
                },
                "type": "Link",
              },
            ],
            "parent": [Circular],
            "pos": Object {
              "end": 96,
              "start": 77,
            },
            "type": "TableCell",
          },
          Object {
            "children": Array [],
            "parent": [Circular],
            "pos": Object {
              "end": 98,
              "start": 97,
            },
            "type": "TableCell",
          },
        ],
        "parent": [Circular],
        "pos": Object {
          "end": 99,
          "start": 76,
        },
        "type": "TableRow",
      },
    ],
    "type": "Table",
  },
]
`;
